feat: added more places

--- a/offline-guide.html
+++ b/offline-guide.html
@@ -176,6 +176,13 @@
                 <p><strong>English Speaking Medical:</strong> International SOS (+86-10-6462-9100)</p>
             </div>
             
+            <div class="emergency-box" style="background: #00b894; margin-top: 15px;">
+                <h3>🧑‍✈️ Your Tour Guide</h3>
+                <p><strong>Name:</strong> Liu Zhirong (刘智荣)</p>
+                <p><strong>Phone:</strong> <a href="tel:+8613988886650" style="color: white; font-size: 1.2em; text-decoration: underline;">139-8888-6650</a></p>
+                <p style="font-size: 0.9em; margin-top: 10px;">📱 Contact for any questions, emergencies, or assistance during your trip</p>
+            </div>
+            
             <div class="essential-info">
                 <div class="info-card">
                     <h3>Tourist Police Stations</h3>
@@ -431,6 +438,8 @@
                         <li>Travel insurance policy</li>
                         <li>Hotel confirmations</li>
                         <li>Transportation tickets</li>
+                        <li><strong>Tour Guide: Liu Zhirong</strong><br>
+                            📞 139-8888-6650</li>
                         <li>Emergency contact list</li>
                         <li>Offline maps screenshots</li>
                     </ul>
